# gravity_SDN

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  openapi.yaml
docs/yang_payloads/: bgp_evpn_instance.xml  distributed_gateway.xml
frontend/: index.html
frontend/css/: gravity.css
frontend/js/: app.js
frontend/js/panels/: alarms.js  audit.js  dashboard.js  devices.js  fabrics.js  health.js  paths.js  provisioning.js  resources.js  runbooks.js  telemetry.js  topology.js  users.js  vxlan.js  ztp.js
gravity_sdn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: __init__.py
services/api_gateway/: __init__.py  auth.py  dependencies.py  main.py
services/api_gateway/routers/: devices.py  fabrics.py  intents.py  runbooks.py  telemetry.py  topology.py  ztp.py
services/intent_engine/: main.py  policy_engine.py  rib_simulator.py  translator.py  verifier.py
services/oam_service/: __init__.py  auto_remediation.py  correlator.py  health_evaluator.py  impact_analyzer.py  main.py  path_tracer.py  telemetry_consumer.py
services/provisioning_engine/: __init__.py  config_audit.py  evpn_provisioner.py  main.py  orchestrator.py  payload_builder.py  vxlan_provisioner.py
services/resource_manager/: __init__.py  ipam.py  main.py  rt_rd_manager.py  vni_allocator.py
services/ztp_service/: __init__.py  baseline_deployer.py  dhcp_listener.py  esn_authenticator.py  main.py  runbook_engine.py
shared/: __init__.py  config.py
shared/graph/: __init__.py  client.py  queries.py
shared/kafka/: __init__.py  consumer.py  producer.py
shared/models/: __init__.py  device.py  fabric.py  intent.py  telemetry.py
shared/netconf/: __init__.py  transaction.py  transport.py
shared/netconf/xml_templates/: bgp_evpn.xml.j2  bridge_domain.xml.j2  route_targets.xml.j2  vbdif_gateway.xml.j2  vrf_instance.xml.j2  vxlan_nvo3.xml.j2
tests/: conftest.py
tests/unit/: __init__.py  test_correlator.py  test_intent_translator.py  test_netconf_transaction.py  test_payload_builder.py  test_resource_manager.py  test_verifier.py
