[project]
name = "gravity-sdn"
version = "1.0.0"
description = "CloudEngine IDN Automation Platform — Level 3+ Autonomous Driving Network Controller"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- NETCONF / SSH ---
    "ncclient>=0.6.15",
    "paramiko>=3.4.0",

    # --- Graph Database ---
    "neo4j>=5.20.0",

    # --- Message Broker ---
    "confluent-kafka>=2.4.0",

    # --- Relational Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # --- Cache / Distributed Locks ---
    "redis[hiredis]>=5.0.0",

    # --- gRPC Telemetry ---
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=5.27.0",

    # --- Data Validation & Settings ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Templating ---
    "jinja2>=3.1.4",

    # --- Auth / Crypto ---
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "passlib[bcrypt]>=1.7.4",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Graph Algorithms (Intent Verification) ---
    "networkx>=3.3",

    # --- Utilities ---
    "lxml>=5.2.0",
    "pyyaml>=6.0.1",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "services*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
